<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acivity_detalle">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="40dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <ImageView
        android:id="@+id/imagenFoto"
        android:layout_width="250dp"
        android:layout_height="246dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:contentDescription="Imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foto_06" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top16"
        android:text="Maricel Chavela"


        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenFoto" />

    <TextView
        android:id="@+id/tvApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Contoso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />


    <TextView
        android:id="@+id/tv_titulo_edad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="@dimen/margin_top16"

        android:text="@string/titulo_edad"
        app:layout_constraintEnd_toStartOf="@+id/direcciones"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApellido" />

    <TextView
        android:id="@+id/tvTituloPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApellido" />

    <TextView
        android:id="@+id/tv_titulo_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/margin_container"
        android:text="@string/titulo_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDireccion" />

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="@dimen/margin_top8"
        android:text="34 años"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_edad" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="@dimen/margin_top8"
        android:text="test@test.com"
        android:textColor="#000"
        app:layout_constraintEnd_toStartOf="@id/tv_titulo_telefono"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_email" />

    <TextView
        android:id="@+id/tvDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top8"
        android:layout_marginEnd="@dimen/margin_container"
        android:text="En su casa"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direcciones" />

    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top8"
        android:text="56 kilos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloPeso" />

    <TextView
        android:id="@+id/tv_titulo_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_container"
        android:layout_marginTop="24dp"
        android:text="@string/titulo_email"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEdad" />

    <TextView
        android:id="@+id/direcciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/margin_top16"
        android:layout_marginEnd="@dimen/margin_container"
        android:text="@string/titulo_direccion"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tvApellido" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top8"
        android:layout_marginEnd="@dimen/margin_container"
        android:text="@string/titulo_telefono"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_telefono" />

</androidx.constraintlayout.widget.ConstraintLayout>