<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nuevo">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:hint="56 kilos"
        android:inputType="numberDecimal"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="40dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AppCompat.Light" />

    <ImageView
        android:id="@+id/imagenFoto"
        android:layout_width="250dp"
        android:layout_height="246dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:contentDescription="Imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foto_01" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvNombre"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:hint="Nombre"
        android:inputType="text"
        android:singleLine="true"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/tvApellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenFoto"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvApellido"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:hint="Apellido"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenFoto" />

    <EditText
        android:id="@+id/tvEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Empresa"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        tools:layout_editor_absoluteX="174dp" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/tvTituloPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_peso"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPeso" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/tv_titulo_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/titulo_telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTelefono" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:hint="test@test.com"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/empresa" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_edad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEdad"

        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:hint="Edad"
        android:inputType="number"
        android:singleLine="true"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre" />

    <TextView
        android:id="@+id/tv_titulo_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/titulo_email"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:hint="7894759"
        android:inputType="number"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvApellido"
        tools:layout_editor_absoluteY="386dp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tvDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:hint="En su casa"
        android:inputType="textPostalAddress"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo_telefono"
        tools:layout_editor_absoluteY="498dp" />

    <TextView
        android:id="@+id/direcciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/titulo_direccion"
        android:textColor="#000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDireccion"
        tools:layout_editor_absoluteY="544dp" />


</androidx.constraintlayout.widget.ConstraintLayout>